objects/blng__InvoicePlanLine__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__CommencementDateOffsetUnits__c</fullName>
        <label>Commencement Date Offset Units</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CommencementDateOffsetUnits</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CommencementDateOffset__c</fullName>
        <label>Commencement Date Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__CommencementDate__c</fullName>
        <label>Commencement Date</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CommencementDate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__FlatAmount__c</fullName>
        <label>Flat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoicePlan__c</fullName>
        <label>Invoice Plan</label>
        <referenceTo>blng__InvoicePlan__c</referenceTo>
        <relationshipLabel>Invoice Plan Lines</relationshipLabel>
        <relationshipName>InvoicePlanLinesInvoicePlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__ProcessingOrder__c</fullName>
        <label>Processing Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ServicePeriodEnd__c</fullName>
        <label>Service Period End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__ServicePeriodEnd</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__ServicePeriodStart__c</fullName>
        <label>Service Period Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__ServicePeriodStart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__Type</valueSetName>
        </valueSet>
    </fields>
    <label>Invoice Plan Line</label>
    <nameField>
        <label>Invoice Plan Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>